# axidev-osk

./: .eslintrc.json  .gitignore  .gitmodules  AGENTS.md  README.md  forge.config.ts  forge.env.d.ts  index.html  package-lock.json  package.json  pyproject.toml  start_wayland_layer_shell.sh  tsconfig.json  vite.main.config.mts  vite.renderer.config.mts
.github/actions/build-vendored-axidev-io-ubuntu/: action.yml
.github/actions/build-vendored-axidev-io-windows/: action.yml
.github/actions/setup-python-env/: action.yml
.github/actions/setup-ubuntu-runner/: action.yml
.github/actions/setup-windows-runner/: action.yml
.github/workflows/: build-artifacts.yml  ci.yml  release.yml  reusable-check-ubuntu.yml  reusable-check-windows.yml  reusable-standalone-ubuntu.yml  reusable-standalone-windows.yml
scripts/: build_standalone.py
src/: App.tsx  index.css  main.ts  preload.ts  vite-env.d.ts
src/axidev_osk/: __init__.py  __main__.py  app.py  keyboard_io.py  models.py
src/axidev_osk/application/: __init__.py  hot_corner.py  layer_shell.py  linux_permissions.py  main_window.py  overlay_window.py  window_chrome.py
src/axidev_osk/components/: __init__.py  key_button.py  (+3 more)
src/components/: KeyButton.tsx  keyButton.types.ts
src/keyboard/: keyBindings.ts  service.ts  shared.ts
src/layout/: usIsoLayout.ts
tests/: test_build_standalone.py  test_hot_corner_overlay.py  test_key_state_listener.py  test_keyboard_io_permissions.py  test_keyboard_io_repeat.py  test_keyboard_metrics.py  test_linux_permissions.py  test_main_window_layout.py  test_us_iso_layout.py
(+4 files in other folders)
