[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "axidev-osk"
version = "0.9.0"
description = "A PySide6 on-screen keyboard with a US ISO-style layout."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
dependencies = ["PySide6>=6.7,<7"]

[project.scripts]
axidev-osk = "axidev_osk.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
